--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Test
         id: test
         run: |
+          set -o pipefail
           dotnet test --no-build --configuration Release \
             --logger "trx;LogFileName=results.trx" \
             --logger "console;verbosity=detailed" \
@@ -60,6 +61,7 @@ jobs:
       - name: Deploy with Helm
         id: helm
         run: |
+          set -o pipefail
           helm upgrade --install orders-api ./deploy/helm \
             --wait --timeout 2m \
             2>&1 | tee helm-output.txt
