--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Create KinD cluster
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.12.0
+        with:
+          cluster_name: kind
 
       - name: Build Docker image
         run: docker build -t orders-api:latest -f Dockerfile .
