--- a/.github/workflows/sync-workflows.yml
+++ b/.github/workflows/sync-workflows.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install gh-aw CLI
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: gh extension install github/gh-aw
 
       - name: Compile and add guards
